Fix modal positioning on mobile and tablet screens

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,6 +20,12 @@
   flex-direction: column;
 }
 
+
+@media screen and (max-width: 1024px) {
+  .page__hero{
+    min-height: 400px;
+  }
+}
 @media screen and (max-width: 768px) {
   .page__hero {
     min-height: auto;
